refactor: test 코드